Do not create multiple QMenu when global menu is set to compact

The multiple menus are only required when the global menu is in its
full size; when in compact view, only one is needed.

BUG:506170


(cherry picked from commit 67374f9e659cfd17c0cb4d7eba0a92a08a72c2d9)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>